# lens

./: .gitignore  Makefile  README.md  go.work
.github/: pull_request_template.md
.github/workflows/: publish-crate.yml  test.yml  validate-title.yml
host-go/: Makefile  README.md  go.mod  go.sum
host-go/cli/: main.go
host-go/config/: config.go
host-go/config/model/: lens.go
host-go/engine/: engine.go
host-go/engine/module/: instance.go  memory.go  module.go  protocol.go  runtime.go
host-go/engine/pipes/: fromPipe.go  fromSource.go  pipe.go  protocol.go
host-go/engine/runtime/: runtime.go
host-go/engine/tests/: append_lens_test.go  engine_runtime_test.go  memory_test.go  utils.go  wasm32_pipeline_test.go  wasm32_pipeline_with_params_test.go  wasm32_pipeline_with_state_test.go
host-go/lib/: lib.go
host-go/lib/tests/: append_lens_test.go  wasm32_pipeline_test.go
host-go/runtimes/: runtimes.go  runtimes_cshared.go  runtimes_js.go
host-go/runtimes/js/: go.mod  memory.go  runtime.go
host-go/runtimes/wasmer/: go.mod  go.sum  runtime.go
host-go/runtimes/wasmtime/: go.mod  go.sum  runtime.go
host-go/runtimes/wazero/: go.mod  memory.go  runtime.go
host-rust/: Makefile
host-rust/engine/: Cargo.toml
host-rust/engine/src/: lib.rs
hosts/go/: Makefile
hosts/go/lib/: lib.go
sdk-rust/: Cargo.toml
sdk-rust/src/: error.rs  lib.rs  option.rs  result.rs
tests/hosts/host-go/: Makefile  README.md  go.mod  go.sum
tests/integration/: Makefile  README.md  go.mod
tests/integration/cli/: simple_test.go  (+11 more)
tests/modules/: Makefile  go.mod  utils.go
(+45 files in other folders)
