[package]
name = "lens_sdk"
description = "An SDK for writing bi-directional, wasm based, LensVM transformations in Rust"
version = "0.6.0"
edition = "2021"
readme = "../README.md"
repository = "https://github.com/lens-vm/lens"
license-file = "../LICENSE"

[lib]
crate-type = ["lib"]

[dependencies]
serde = "1.0"
serde_json = "1.0.87"
byteorder = "1.4.3"
